# HARD

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  objects.inv  plot_KH.py  plot_KH_2d.py  plot_advection.py  plot_diffusion.py  plot_heating_and_cooling.py  plot_rad_rh.py  plot_shadow.py  plot_sod.py  plot_su-olson.py  post_process_2d.py  search.html  searchindex.js  sine-convergence.py  submit.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/hard/: equations.doctree  inputfiles.doctree  method.doctree  test_problems.doctree  visualization.doctree
.github/workflows/: documentation.yaml
_sources/: index.rst.txt
_static/: documentation_options.js
acoustic_case/: acoustic_error.py  acoustic_solution.py  plot_acoustic.py
app/: CMakeLists.txt  actions.hh  advance.hh  analyze.hh  constants.hh  finalize.hh  flastro.cc  flecsolvers.hh  hard.cc  init.hh  linsolve.hh  options.hh  rad.hh  rad_function.hh  state.hh  types.hh  utils.hh
app/catalyst/: adaptor.cc  adaptor.hh  types.cc  types.hh
app/numerical_algorithms/: riemann_solvers.hh  root_finder.cc  root_finder.hh  time_stepper.hh
app/tasks/: boundary.hh  catalyst.hh  external_source.hh  hydro.hh  hydro_new.hh  init.hh  io.hh  rad.hh  rad_root.hh  time_derivative.hh  utils.hh
app/tasks/boundaries/: boundary.hh  dirichlet.hh  flow.hh  reflective.hh
app/tasks/hydro/: compute_interface_fluxes.hh  cons2prim.hh  constant_gravity.hh  explicit_source_update.hh  maxcharspeed.hh  reconstruct.hh
app/tasks/initial_data/: acoustic_wave.hh  all_initial_data.hh  heating_and_cooling.hh  heating_and_cooling_afld.hh  implosion_external_sourceT.hh  implosion_forced_T.hh  kelvin_helm.hh  kelvin_helm_rad.hh  kh_instability.hh  lw_implosion.hh  rad_rank_hugoniot.hh  radiation_energy_diffusion.hh  radiative_kh_instability.hh  rayleigh_taylor.hh  richtmyer_meshkov.hh  sedov.hh  shadow_2d.hh  shock_tube.hh  sine_wave.hh  su_olson.hh
app/tests/: test_convergence.sh  test_distributed.sh  test_verify.sh
cmake/: FindClangFormat.cmake
configs/: acoustic-wave.yaml  diffusion.yaml  distr-rk.yaml  heating-cooling-afld.yaml  heating-cooling.yaml  implosion.yaml  kh-instability.yaml  kh.yaml  kh_rad.yaml  leblanc.yaml  liska-wendroff.yaml  radiative-kh-instability.yaml  rayleigh_taylor.yaml  rk.yaml  rm.yaml  rt.yaml  rt_rad.yaml  sedov.yaml  shadow_2d.yaml  sine-wave.yaml  sod.yaml  sod_tabulated.yaml  su-olson.yaml
configs/ci_configs/: acoustic-wave.yaml  acoustic-wave_convergence.yaml  distr-rk.yaml  rk.yaml  sod.yaml
configs/scaling/size/: rk-hydro-16.yaml  rk-hydro-17.yaml  rk-hydro-18.yaml  rk-hydro-19.yaml  rk-hydro-20.yaml  rk-hydro-21.yaml  rk-hydro-22.yaml  rk-hydro-26.yaml  rk-hydro-28.yaml  rk-rad-16.yaml  rk-rad-19.yaml  rk-rad-20.yaml  rk-rad-21.yaml  rk-rad-22.yaml  rk-rad-23.yaml  rk-rad-26.yaml  rk-rad-27.yaml  rk-rad-28.yaml  rk-rad-29.yaml  rk-rad-30.yaml
configs/scaling/strong/: rk-1d-hydro.yaml  rk-1d-rad.yaml  rk-2d-hydro.yaml  rk-2d-rad.yaml  rk-3d-hydro.yaml
configs/scaling/weak/: rk-hydro-16.yaml  rk-hydro-256.yaml  rk-rad-1024.yaml  rk-rad-128.yaml  rk-rad-16.yaml  rk-rad-2.yaml  rk-rad-256.yaml  rk-rad-4.yaml  rk-rad-64.yaml  rk-rad-8.yaml
configs/size/: rk-hydro-15.yaml  rk-hydro-23.yaml  rk-rad-15.yaml  rk-rad-17.yaml  rk-rad-18.yaml  rk-rad-24.yaml  rk-rad-25.yaml
configs/weak/: rk-hydro-1.yaml  rk-hydro-1024.yaml  rk-hydro-128.yaml  rk-hydro-2.yaml  rk-hydro-32.yaml  rk-hydro-512.yaml  rk-hydro-8.yaml  rk-rad-1.yaml  rk-rad-32.yaml  rk-rad-512.yaml
doc/doxygen/: common.conf  conf.in  flastro.conf.in  mainpage.md
doc/sphinx/: conf.py  conf.py.in  index.rst
doc/sphinx/flastro/: api.rst  method.rst
doc/sphinx/hard/: afld.rst  api.rst  equations.rst  inputfiles.rst  method.rst  solver.rst  test_problems.rst  visualization.rst
doc/tex/: structure.tex
hard/: equations.html  inputfiles.html  method.html  test_problems.html  visualization.html
scripts/: analyze_results.py  basic_job.sh  prof_gpu.sh  submit_weak_scaling.py
spack-repo/: repo.yaml
spack_environments/chicoma/flecsi_hpx_mpi/: spack.yaml
spack_environments/chicoma/flecsi_legion_kokkos/: spack.yaml
spack_environments/chicoma/flecsi_mpi_kokkos/: spack.yaml
spack_environments/darwin/flecsi_hpx_lci/: spack.yaml
spack_environments/darwin/flecsi_hpx_mpi/: spack.yaml
spack_environments/darwin/flecsi_legion_kokkos/: spack.yaml
spack_environments/darwin/flecsi_mpi_kokkos/: spack.yaml
spec/: CMakeLists.txt  control.hh  eos.hh  io.hh  labels.hh  limiter.hh  mesh.hh  rad_function.hh  runtime.hh  types.hh  utils.hh
tools/: README.md  acoustic_solution.py  catalyst_pipeline_with_rendering_density.py  catalyst_pipeline_with_rendering_pressure.py  convergence_verify.py  exactpack_verify.py  gridwriter.py  verify_lib.py
tools/visualization/1d/: output_time_evolution.gnuplot
tools/visualization/2d/: make_png_from_raw_2D.sh  output-XXXXX-2D-0.raw.gnuplot
